RESOLVED FIXED50409
Flash videos on YouTube flicker
https://bugs.webkit.org/show_bug.cgi?id=50409
Summary Flash videos on YouTube flicker
Anders Carlsson
Reported 2010-12-02 13:31:22 PST
Flash videos on YouTube flicker
Attachments
Patch (2.11 KB, patch)
2010-12-02 13:46 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-12-02 13:44:22 PST
Anders Carlsson
Comment 2 2010-12-02 13:46:31 PST
Anders Carlsson
Comment 3 2010-12-02 13:49:52 PST
Note You need to log in before you can comment on or make changes to this bug.