Flash videos on YouTube flicker https://bugs.webkit.org/show_bug.cgi?id=50409 <rdar://problem/8668757>

Reviewed by Sam Weinig.

When painting from a backing store, we need to add the source location
to the destination point.

* WebProcess/Plugins/PluginProxy.cpp:
(WebKit::PluginProxy::paint):
(WebKit::PluginProxy::update):

Canonical link: https://commits.webkit.org/63624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73195 268f45cc-cd09-0410-ab3c-d52691b4dbfc